--- a/src/style.css
+++ b/src/style.css
@@ -1,333 +1,790 @@
-/* CSS Custom Properties Definitions */
+@charset "UTF-8";
 
+/* 基本色 */
 :root {
-  --maxWidth-none: "none";
-  --maxWidth-xs: 20rem;
-  --maxWidth-sm: 24rem;
-  --maxWidth-md: 28rem;
-  --maxWidth-lg: 32rem;
-  --maxWidth-xl: 36rem;
-  --maxWidth-2xl: 42rem;
-  --maxWidth-3xl: 48rem;
-  --maxWidth-4xl: 56rem;
-  --maxWidth-full: "100%";
-  --maxWidth-wrapper: var(--maxWidth-2xl);
-  --spacing-px: "1px";
-  --spacing-0: 0;
-  --spacing-1: 0.25rem;
-  --spacing-2: 0.5rem;
-  --spacing-3: 0.75rem;
-  --spacing-4: 1rem;
-  --spacing-5: 1.25rem;
-  --spacing-6: 1.5rem;
-  --spacing-8: 2rem;
-  --spacing-10: 2.5rem;
-  --spacing-12: 3rem;
-  --spacing-16: 4rem;
-  --spacing-20: 5rem;
-  --spacing-24: 6rem;
-  --spacing-32: 8rem;
-  --fontFamily-sans: Montserrat, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --fontFamily-serif: "Merriweather", "Georgia", Cambria, "Times New Roman",
-    Times, serif;
-  --font-body: var(--fontFamily-serif);
-  --font-heading: var(--fontFamily-sans);
-  --fontWeight-normal: 400;
-  --fontWeight-medium: 500;
-  --fontWeight-semibold: 600;
-  --fontWeight-bold: 700;
-  --fontWeight-extrabold: 800;
-  --fontWeight-black: 900;
-  --fontSize-root: 16px;
-  --lineHeight-none: 1;
-  --lineHeight-tight: 1.1;
-  --lineHeight-normal: 1.5;
-  --lineHeight-relaxed: 1.625;
-  /* 1.200 Minor Third Type Scale */
-  --fontSize-0: 0.833rem;
-  --fontSize-1: 1rem;
-  --fontSize-2: 1.2rem;
-  --fontSize-3: 1.44rem;
-  --fontSize-4: 1.728rem;
-  --fontSize-5: 2.074rem;
-  --fontSize-6: 2.488rem;
-  --fontSize-7: 2.986rem;
-  --color-primary: #005b99;
-  --color-text: #2e353f;
-  --color-text-light: #4f5969;
-  --color-heading: #1a202c;
-  --color-heading-black: black;
-  --color-accent: #d1dce5;
+	--main-color: #5D9AB2;
+	--accent-color: #BF6A7A;
+	--dark-main-color: #2B5566;
+	--text-bright-color: #fff;
+	--icon-color: #fff;
+	--icon-bk-color: #ddd;
+	--gray-color: #ddd;
+	--large-width: 1000px;
+	--middle-width: 800px;
 }
 
-/* HTML elements */
 
-*,
-:after,
-:before {
-  box-sizing: border-box;
+/* 基本設定： フォントサイズ */
+@media (max-width: 599px) {
+	:root {
+		font-size: 14px;
+	}
 }
 
-html {
-  line-height: var(--lineHeight-normal);
-  font-size: var(--fontSize-root);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@media (min-width: 600px) and (max-width: 799px) {
+	:root {
+		font-size: 16px;
+	}
 }
 
+@media (min-width: 800px) {
+	:root {
+		font-size: 18px;
+	}
+}
+
+body {font-size: 16px;}
+
+
+
+/* 基本設定： ページ全体 */
 body {
-  font-family: var(--font-body);
-  font-size: var(--fontSize-1);
-  color: var(--color-text);
+	margin: 0;
+	font-family: 'メイリオ',
+		'Hiragino Kaku Gothic Pro', 
+		sans-serif;
 }
 
+
+/* コンテンツA： ヒーローイメージ */
+.conA {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	min-height: 450px;
+	background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(../content/assets/fruits.jpg);
+	background-position: center;
+	background-size: cover;
+	color: #fff;
+	color: var(--text-bright-color);
+	text-align: center;
+}
+
+.conA.compact {
+	height: 450px;
+	min-height: 0;
+	background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(../content/assets/balloon.jpg);
+}
+
+.conA h1 {
+	margin-top: 0;
+	margin-bottom: 10px;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 15vw;
+	letter-spacing: 0.2em;
+	margin-left: 0.2em;
+}
+
+.conA p {
+	margin-top: 0;
+	margin-bottom: 0;
+	font-size: 18px;
+}
+
+.conA img,
+.conA svg {
+	width: 20%;
+}
+
+.conA a {
+	display: inline-block;
+	margin-top: 20px;
+	padding: 10px 30px;
+	border: solid 3px currentColor;
+	border-radius: 6px;
+	background-color: #BF6A7A;
+	background-color: var(--accent-color);
+	color: #fff;
+	color: var(--text-bright-color);
+	font-size: 14px;
+	text-decoration: none;
+}
+
+.conA a:hover	{
+	background-image: linear-gradient(
+		rgba(255,255,255,0.2),
+		rgba(255,255,255,0.2)
+	);
+}
+
+
+@media (min-width: 768px) {
+	.conA h1 {
+		font-size: 115px;
+	}
+
+	.conA p {
+		font-size: 24px;
+	}
+}
+
+
+
+/* コンテンツB： 概要（アイコン＋テキスト） */
+.conB .container {
+	padding-top: 80px;
+	padding-bottom: 20px;
+}
+
+.conB .text {
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 60px;
+	text-align: center;
+}
+
+.conB h2 {
+	margin-top: 0;
+	margin-bottom: 10px;
+	font-size: 20px;
+}
+
+.conB p {
+	margin-top: 0;
+	margin-bottom: 20px;
+	font-size: 14px;
+	line-height: 1.8;
+	opacity: 0.8;
+}
+
+.conB a {
+	color: #5D9AB2;
+	color: var(--main-color);
+	text-decoration: none;
+}
+
+.conB a:hover	{
+	text-decoration: underline;
+}
+
+.conB .icon	{
+	display: inline-block;
+	margin-bottom: 20px;
+	font-size: 40px;
+	width: 2em;
+	line-height: 2em;
+	border-radius: 50%;
+	text-align: center;
+	background-color: #ddd;
+	background-color: var(--icon-bk-color);
+	color: #fff;
+	color: var(--icon-color);
+}
+
+@media (min-width: 768px) {
+	.conB .container {
+		display: flex;
+		max-width: 1000px;
+		max-width: var(--large-width);
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.conB .text	{
+		flex: 1;
+	}
+}
+
+
+
+/* コンテンツC： 概要（画像＋テキスト） */
+.conC {
+	background-color: #5D9AB2;
+	background-color: var(--main-color);
+	color: #fff;
+	color: var(--text-bright-color);
+}
+
+.conC .text {
+	padding: 20px;
+}
+
+.conC h2 {
+	margin-top: 0;
+	margin-bottom: 10px;
+	font-size: 20px;
+}
+
+.conC p {
+	margin-top: 0;
+	margin-bottom: 20px;
+	font-size: 14px;
+	line-height: 1.8;
+	opacity: 0.8;
+}
+
+.conC a {
+	display: inline-block;
+	margin-top: 20px;
+	padding: 10px 30px;
+	border: solid 3px currentColor;
+	border-radius: 6px;
+	background-color: #BF6A7A;
+	background-color: var(--accent-color);
+	color: #fff;
+	color: var(--text-bright-color);
+	font-size: 14px;
+	text-decoration: none;
+}
+
+.conC a:hover	{
+	background-image: linear-gradient(
+		rgba(255,255,255,0.2),
+		rgba(255,255,255,0.2)
+	);
+}
+
+.conC .photo {
+	min-height: 200px;
+	background-image: url(../content/assets/note.jpg);
+	background-position: center;
+	background-size: cover;
+}
+
+@media (min-width: 768px) {
+	.conC .container {
+		display: flex;
+		max-width: 1000px;
+		max-width: var(--large-width);
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.conC .photo {
+		flex: 3;
+	}
+
+	.conC .text {
+		flex: 2;
+		padding: 50px;
+	}
+}
+
+
+
+/* コンテンツD： 概要（画像＋テキスト：逆配置） */
+.conD .container {
+	padding-top: 2px;
+}
+
+.conD .text {
+	padding: 20px;
+}
+
+.conD h2 {
+	margin-top: 0;
+	margin-bottom: 10px;
+	font-size: 20px;
+}
+
+.conD p {
+	margin-top: 0;
+	margin-bottom: 20px;
+	font-size: 14px;
+	line-height: 1.8;
+	opacity: 0.8;
+}
+
+.conD a {
+	display: inline-block;
+	margin-top: 20px;
+	padding: 10px 30px;
+	box-shadow: 0 0 0 1px #888;
+	border: solid 3px currentColor;
+	border-radius: 6px;
+	background-color: #BF6A7A;
+	background-color: var(--accent-color);
+	color: #fff;
+	color: var(--text-bright-color);
+	font-size: 14px;
+	text-decoration: none;
+}
+
+.conD a:hover	{
+	background-image: linear-gradient(
+		rgba(255,255,255,0.2),
+		rgba(255,255,255,0.2)
+	);
+}
+
+.conD .photo {
+	min-height: 200px;
+	background-image: url(../content/assets/life.jpg);
+	background-position: center;
+	background-size: cover;
+}
+
+@media (min-width: 768px) {
+	.conD .container {
+		display: flex;
+		flex-direction: row-reverse;
+		max-width: 1000px;
+		max-width: var(--large-width);
+		margin-left: auto;
+		margin-right: auto;
+		padding-top: 40px;
+		padding-bottom: 40px;
+	}
+
+	.conD .photo {
+		flex: 0 0 400px;
+	}
+
+	.conD .text {
+		flex: 1;
+		padding: 50px;
+	}
+}
+
+
+
+/* フッター */
 footer {
-  padding: var(--spacing-6) var(--spacing-0);
+	color: #fff;
+	color: var(--text-bright-color);
+	background-color: #2B5566;
+	background-color: var(--dark-main-color);
 }
 
-hr {
-  background: var(--color-accent);
-  height: 1px;
-  border: 0;
+footer .container {
+	padding: 40px 20px;
 }
 
-/* Heading */
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: var(--font-heading);
-  margin-top: var(--spacing-12);
-  margin-bottom: var(--spacing-6);
-  line-height: var(--lineHeight-tight);
-  letter-spacing: -0.025em;
+@media (min-width: 768px) {
+	footer .container {
+		display: flex;
+		flex-wrap: wrap;
+		max-width: 1000px;
+		max-width: var(--large-width);
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.footA {
+		flex: 0 0 40%;
+	}
+
+	.footB {
+		flex: 0 0 60%;
+	}
+
+	.footC {
+		flex: 0 0 100%;
+	}
 }
 
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: var(--fontWeight-bold);
-  color: var(--color-heading);
+
+/* フッターA： サイト情報 */
+.footA {
+	margin-bottom: 30px;
 }
 
-h1 {
-  font-weight: var(--fontWeight-black);
-  font-size: var(--fontSize-6);
-  color: var(--color-heading-black);
+.footA h2 {
+	margin-top: 0;
+	margin-bottom: 10px;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 30px;
+	letter-spacing: 0.2em;
 }
 
-h2 {
-  font-size: var(--fontSize-5);
+.footA p {
+	margin-top: 0;
+	margin-bottom: 0;
+	font-size: 14px;
 }
 
-h3 {
-  font-size: var(--fontSize-4);
+.footA a {
+	color: inherit;
+	text-decoration: none;
 }
 
-h4 {
-  font-size: var(--fontSize-3);
+
+/* フッターB： フッターメニュー */
+.footB div {
+	margin-bottom: 20px;
 }
 
-h5 {
-  font-size: var(--fontSize-2);
+.footB h3 {
+	margin-top: 0;
+	margin-bottom: 10px;
+	border-bottom: solid 1px currentColor;
+	font-size: 14px;
 }
 
-h6 {
-  font-size: var(--fontSize-1);
+.footB ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
 
-h1 > a {
-  color: inherit;
-  text-decoration: none;
+.footB a {
+	display: block;
+	padding: 5px;
+	color: inherit;
+	font-size: 12px;
+	text-decoration: none;
 }
 
-h2 > a,
-h3 > a,
-h4 > a,
-h5 > a,
-h6 > a {
-  text-decoration: none;
-  color: inherit;
+.footB a:hover {
+	background-color: rgba(0,0,0,0.3);
 }
 
-/* Prose */
 
-p {
-  line-height: var(--lineHeight-relaxed);
-  --baseline-multiplier: 0.179;
-  --x-height-multiplier: 0.35;
-  margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
-  padding: var(--spacing-0);
+@media (min-width: 768px) {
+	.footB {
+		display: flex;
+	}
+
+	.footB div {
+		flex: 1;
+	}
+
+	.footB div:not(:first-child) {
+		margin-left: 40px;
+	}
 }
 
-ul,
-ol {
-  margin-left: var(--spacing-0);
-  margin-right: var(--spacing-0);
-  padding: var(--spacing-0);
-  margin-bottom: var(--spacing-8);
-  list-style-position: outside;
-  list-style-image: none;
+
+/* フッターC： コピーライト */
+.footC {
+	font-size: 12px;
+	text-align: center;
+	font-family: 'Montserrat', sans-serif;
 }
 
-ul li,
-ol li {
-  padding-left: var(--spacing-0);
-  margin-bottom: calc(var(--spacing-8) / 2);
+
+/* フッターD： SNSメニュー */
+.footD {
+	margin-top: 20px;
 }
 
-li > p {
-  margin-bottom: calc(var(--spacing-8) / 2);
+.footD ul {
+	display: flex;
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
 
-li *:last-child {
-  margin-bottom: var(--spacing-0);
+.footD a {
+	display: block;
+	margin-right: 8px;
+	padding: 0;
+	color: inherit;
+	font-size: 16px;
+	text-decoration: none;
+	border: solid 1px currentColor;
+	width: 2em;
+	line-height: 2em;
+	border-radius: 50%;
+	text-align: center;
 }
 
-li > ul {
-  margin-left: var(--spacing-8);
-  margin-top: calc(var(--spacing-8) / 2);
+.footD a:hover {
+	background-color: rgba(0,0,0,0.3);
 }
 
-blockquote {
-  color: var(--color-text-light);
-  margin-left: calc(-1 * var(--spacing-6));
-  margin-right: var(--spacing-8);
-  padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-6);
-  border-left: var(--spacing-1) solid var(--color-primary);
-  font-size: var(--fontSize-2);
-  font-style: italic;
-  margin-bottom: var(--spacing-8);
+
+/* ヘッダー */
+header {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 100;
+	width: 100%;
+	background-color: rgba(255,255,255,0.9);
 }
 
-blockquote > :last-child {
-  margin-bottom: var(--spacing-0);
+.nohero header {
+	position: static;
+	border-bottom: solid 1px #ddd;
+	border-bottom: solid 1px var(--gray-color);
 }
 
-blockquote > ul,
-blockquote > ol {
-  list-style-position: inside;
+/* ヘッダーA: サイト名 */
+.headA {
+	display: inline-block;
+	line-height: 70px;
+	padding-left: 20px;
+	padding-right: 20px;
+	background-color: #5D9AB2;
+	background-color: var(--main-color);
+	color: #fff;
+	color: var(--text-bright-color);
+	font-family: 'Montserrat', sans-serif;
+	font-size: 24px;
+	text-decoration: none;
 }
 
-table {
-  width: 100%;
-  margin-bottom: var(--spacing-8);
-  border-collapse: collapse;
-  border-spacing: 0.25rem;
+
+/* ヘッダーB： ナビゲーションメニュー */
+.headB ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
 
-table thead tr th {
-  border-bottom: 1px solid var(--color-accent);
+.headB a {
+	display: block;
+	padding: 15px;
+	color: inherit;
+	font-size: 12px;
+	text-decoration: none;
 }
 
-/* Link */
-
-a {
-  color: var(--color-primary);
+.headB a:hover {
+	background-color: rgba(0,0,0,0.3);
 }
 
-a:hover,
-a:focus {
-  text-decoration: none;
+@media (min-width: 768px) {
+	header .container {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		max-width: 1000px;
+		max-width: var(--large-width);
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.headB ul {
+		display: flex;
+	}
 }
 
-/* Custom classes */
 
-.global-wrapper {
-  margin: var(--spacing-0) auto;
-  max-width: var(--maxWidth-wrapper);
-  padding: var(--spacing-10) var(--spacing-5);
+/* ヘッダーC： トグルボタン */
+
+@media (max-width: 767px) {
+	/* 小さい画面用の設定 */
+	header .container-small {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	.headC {
+		margin-right: 10px;
+		padding: 0;
+		border: none;
+		outline: none;
+		background: none;
+		font-size: 28px;
+		opacity: 0.5;
+		cursor: pointer;
+	}
+
+	.headC:hover {
+		opacity: 0.3;
+	}
+
+	.headB {
+		display: none;
+	}
 }
 
-.global-wrapper[data-is-root-path="true"] .bio {
-  margin-bottom: var(--spacing-20);
+@media (min-width: 768px) {
+	/* 大きい画面用の設定 */
+	.headC {
+		display: none;
+	}
+
+	.headB {
+		display: block !important;
+	}
 }
 
-.global-header {
-  margin-bottom: var(--spacing-12);
+
+
+/* コンテンツページ: 記事 */
+.post .container {
+	max-width: 800px;
+	max-width: var(--middle-width);
+	margin-left: auto;
+	margin-right: auto;
+	padding: 30px 10px;
 }
 
-.main-heading {
-  font-size: var(--fontSize-7);
-  margin: 0;
+.post h1 {
+	padding-left: 0.5rem;
+	border-left: solid 0.75rem #BF6A7A;
+	border-left: solid 0.75rem var(--accent-color);
+	font-size: 2rem;
 }
 
-.post-list-item {
-  margin-bottom: var(--spacing-8);
-  margin-top: var(--spacing-8);
+.post p {
+	font-size: 1rem;
+	line-height: 2;
 }
 
-.post-list-item p {
-  margin-bottom: var(--spacing-0);
+.post img {
+	max-width: 100%;
 }
 
-.post-list-item h2 {
-  font-size: var(--fontSize-4);
-  color: var(--color-primary);
-  margin-bottom: var(--spacing-2);
-  margin-top: var(--spacing-0);
+
+/* コンテンツページ: パンくずリスト */
+.bread ol {
+	display: flex;
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
 
-.post-list-item header {
-  margin-bottom: var(--spacing-4);
+.bread a {
+	display: block;
+	padding: 5px;
+	color: inherit;
+	font-size: 0.875rem;
+	text-decoration: none;
 }
 
-.header-link-home {
-  font-weight: var(--fontWeight-bold);
-  font-family: var(--font-heading);
-  text-decoration: none;
-  font-size: var(--fontSize-2);
+.bread a::after {
+	margin-left: 10px;
+	content: '\f054';
+	font-family: 'FontAwesome';
+	opacity: 0.3;
 }
 
-.bio {
-  display: flex;
-  margin-bottom: var(--spacing-16);
+.bread a:hover {
+	background-color: rgba(0,0,0,0.3);
 }
 
-.bio p {
-  margin-bottom: var(--spacing-0);
+
+
+/* アバウトページ： 画像と沿革 */
+.history {
+	background-color: #5D9AB2;
+	background-color: var(--main-color);
+	color: #fff;
+	color: var(--text-bright-color);
 }
 
-.bio-avatar {
-  margin-right: var(--spacing-4);
-  margin-bottom: var(--spacing-0);
-  min-width: 50px;
-  border-radius: 100%;
+.history .text {
+	padding: 20px;
 }
 
-.blog-post header h1 {
-  margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
+.history h2 {
+	margin-top: 0;
+	margin-bottom: 10px;
+	font-size: 1.5rem;
 }
 
-.blog-post header p {
-  font-size: var(--fontSize-2);
-  font-family: var(--font-heading);
+.history .photo {
+	min-height: 300px;
+	background-image: url(../content/assets/plant.jpg);
+	background-position: center;
+	background-size: cover;
 }
 
-.blog-post-nav ul {
-  margin: var(--spacing-0);
+.history table {
+	border-collapse: collapse;
+	border-top: solid 1px #ddd;
+	border-top: solid 1px var(--gray-color);
+	font-size: 0.875rem;
 }
 
-.gatsby-highlight {
-  margin-bottom: var(--spacing-8);
+.history th,
+.history td {
+	padding-top: 1.8rem;
+	padding-bottom: 1.8rem;
+	border-bottom: solid 1px #ddd;
+	border-bottom: solid 1px var(--gray-color);
 }
 
-/* Media queries */
+.history th {
+	padding-right: 1rem;
+	text-align: left;
+	word-break: keep-all;
+}
 
-@media (max-width: 42rem) {
-  blockquote {
-    padding: var(--spacing-0) var(--spacing-0) var(--spacing-0) var(--spacing-4);
-    margin-left: var(--spacing-0);
-  }
-  ul,
-  ol {
-    list-style-position: inside;
-  }
+
+@media (min-width: 768px) {
+	.history .container {
+		display: flex;
+		max-width: 1000px;
+		max-width: var(--large-width);
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.history .photo {
+		flex: 3;
+	}
+
+	.history .text {
+		flex: 2;
+		padding: 50px;
+	}
+}
+
+
+/* お問い合わせページ: 問い合わせ先 */
+.contact {
+	margin-top: 20px;
+	margin-bottom: 20px;
+	padding: 20px;
+	border: solid 1px #ddd;
+	border: solid 1px var(--gray-color);
+	text-align: center;
+}
+
+.contact span	{
+	display: inline-block;
+	margin-bottom: 20px;
+	font-size: 2.2rem;
+	width: 2em;
+	line-height: 2em;
+	border-radius: 50%;
+	text-align: center;
+	background-color: #5D9AB2;
+	background-color: var(--main-color);
+	color: #fff;
+	color: var(--icon-color);
+}
+
+.contact h2 {
+	margin-top: 0;
+	font-size: 1.2rem;
+}
+
+.contact a {
+	font-size: 1.4rem;
+	color: inherit;
+	text-decoration: none;
+}
+
+
+@media (min-width: 768px) {
+	.contact-wrap {
+		display: flex;
+	}
+
+	.contact {
+		flex: 1;
+	}
+
+	.contact:first-child {
+		margin-right: 20px;
+	}
+}
+
+
+/* お問い合わせページ： 地図 */
+.location iframe {
+	width:100%;
+	height: 400px;
+	vertical-align: bottom;
+}
+
+.location h2 {
+	margin: 0;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	background-color: #5D9AB2;
+	background-color: var(--main-color);
+	color: #fff;
+	color: var(--text-bright-color);
+	font-size: 1.5rem;
+	text-align: center;
 }
