--- a/src/style.css
+++ b/src/style.css
@@ -165,6 +165,7 @@ body {
 	font-size: 40px;
 	width: 2em;
 	line-height: 2em;
+	height: 2em;
 	border-radius: 50%;
 	text-align: center;
 	background-color: #ddd;
